--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <org.slf4j-version>1.6.6</org.slf4j-version>
         <tiles.version>3.0.1</tiles.version>
         <spring.security.version>3.1.2.RELEASE</spring.security.version>
-        <java.mail.version>1.4</java.mail.version>
+        <java.mail.version>1.4.5</java.mail.version>
         <mongo.java.driver.version>2.11.1</mongo.java.driver.version>
         <jackson.version>1.9.5</jackson.version>
     </properties>
@@ -38,6 +38,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
@@ -52,6 +62,11 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>${java.mail.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
         </dependency>
         <!-- mongo -->
         <dependency>
@@ -119,6 +134,11 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
         </dependency>
 
         <!-- AspectJ -->
@@ -227,11 +247,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArgument>-Xlint:all</compilerArgument>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                 </configuration>
             </plugin>
             <plugin>
